fixed the styling problem when a post's width is too wide

--- a/client/src/react-components/Main/Main.css
+++ b/client/src/react-components/Main/Main.css
@@ -20,4 +20,5 @@
 
 .main-middle-area {
   width: 100%;
+  overflow: auto;
 }
